# notnative-app

./: .SRCINFO  .gitignore  AUR_GUIDE.md  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  PKGBUILD.aur  README.md  build.rs  install-fonts.sh  install.sh  mujs-linking.patch  notnative.desktop  test_mpv_audio.rs
assets/: style.css
assets/logo/: style.css
docs/: BACKGROUND_CONTROL.md  MCP_INTEGRATION.md  MCP_TOOLS_REFERENCE.md  RIG_TOOLS_STATUS.md
fonts/: README.md
src/: ai_chat.rs  ai_client.rs  app.rs  file_watcher.rs  i18n.rs  main.rs  music_player.rs.backup  system_tray.rs  youtube_server.rs
src/ai/: agent.rs  memory.rs  mod.rs  rig_adapter.rs  router.rs  tools.rs  tools_analysis.rs  tools_extended.rs  tools_folders.rs  tools_reminders.rs  tools_tags.rs  tools_utility.rs
src/ai/executors/: mod.rs  react.rs  rig_executor.rs
src/core/: command.rs  database.rs  editor_mode.rs  embedding_client.rs  embedding_config.rs  embedding_indexer.rs  markdown.rs  mod.rs  note_buffer.rs  note_file.rs  notes_config.rs  semantic_search.rs  text_chunker.rs
src/mcp/: client.rs  executor.rs  mod.rs  server.rs  tool_schemas.rs  tools.rs
src/reminders/: database.rs  parser.rs
